# Coronary

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_base.dir  data_base_10.dir  data_base_test.dir  data_gt.dir  data_gt_10.dir  data_gt_40.dir  data_gt_test.dir  makefile
Angios_40_training/: data_base.dir  data_base_40.dir  data_gt.dir
CoronaryGUI/: CMakeCache.txt  CMakeLists.txt  CoronaryGUI.pro  CoronaryGUI.pro.user.2.7pre1  coronarygui.cpp  coronarygui.h  coronarygui.ui  dialogbayes.cpp  dialogbayes.h  dialogbayes.ui  filterpars.cpp  filterpars.h  filterpars.ui  main.cpp  moc_coronarygui.cxx  moc_dialogbayes.cxx  moc_filterpars.cxx  ui_coronarygui.h  ui_dialogbayes.h  ui_filterpars.h
CoronaryGUI/CoronaryGUI/: CoronaryGUI.pro  coronarygui.cpp
CoronaryVS/: CoronaryVS.sln
CoronaryVS/CoronaryVS/: CoronaryVS.vcxproj  CoronaryVS.vcxproj.filters
Datasets/: data_base_10.dir  data_base_20.dir  data_base_3.dir  data_base_pgm.dir  data_base_png.dir  data_gt_10.dir  data_gt_20.dir  data_gt_3.dir  data_gt_40.dir  data_gt_60.dir  data_gt_pgm.dir  data_gt_png.dir  dataset_creation.R
GUI/coronary/: coronary.pro  coronarygui.h  main.cpp
GUI/coronaryGUI/: coronaryGUI.pro
src/: IMGCONT.cpp  IMGCONT.h  IMGPROC.cpp  IMGPROC.h  IMGVTK.cpp  IMGVTK.h  args_fercer.c  args_fercer.cpp  args_fercer.h  filtros - copia.cpp  filtros - copia.h  filtros.cpp  filtros.h  main.cpp  opti_fercer.cpp  opti_fercer.h  opti_pars.cpp  opti_pars.h  pars_fercer.c  pars_fercer.h  performance_functions.cpp  performance_functions.h  rand_fercer.cpp  rand_fercer.h  rand_fercer.h.gch  reconstructor_3D.cpp  reconstructor_3D.h
src/libpng_src/: readpng.c  readpng.cpp  readpng.h  writepng.c  writepng.cpp  writepng.h
